src_widget/src/integration/integration.scss
.vipdrv--disable-scroll {
  overflow: hidden;
}

.test-drive {
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  background-color: rgba(33, 33, 33, 0.48);
  z-index: 999;
  transform: scale(0);
  will-change: transform;
}

.test-drive-visible {
  transform: scale(1);
  transition: transform 300ms;
}

.test-drive__content {
  width: 1022px;
  height: 636px;
  background-color: white;
  position: absolute;
  top: 50%;
  left: 50%;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
  border-radius: 4px;
  overflow: hidden;
  transform: scale(0);
  transition: transform 300ms;
  will-change: transform;
}

@media (max-width: 1022px), (max-height: 648px) {
  .test-drive__content {
    width: 100%;
    height: 100%;
  }
}

.test-drive__content-visible {
  transform: translate(-50%, -50%);
}

.frame-header {
  // height: 10%;
  // min-height: 50px;
  width: 100%;
  background-color: #007bff;
  display: block;
  color: #fff;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  font-weight: 300;
  font-size: 20px;
  text-shadow: 0px 1px 1px #868686;
  overflow: hidden;
}

.frame-header__title {
  width: 95%;
  text-align: center;
  float: left;
  line-height: 50px;
}

@media (max-width: 1022px) {
  .frame-header__title {
    width: 85%;
    padding-left: 15%;
  }
}

.frame-header__cross {
  width: 5%;
  float: left;
  line-height: 50px;
  text-align: center;
  cursor: pointer;
}

@media (max-width: 1022px) {
  .frame-header__cross {
    width: 15%;
  }
}

.frame-header__cross:hover {
  font-weight: bold;
}

.test-drive__frame {
  width: 100%;
  height: calc(100% - 50px);
  overflow: hidden;
}

